public/css/style.scss
/* ... */
@media(max-width:767px) {
  .dataTables_wrapper {
    > .row:first-child {
      > div:first-child {
        border-right-width: 1px;
        border-right-style: solid;
        @include table-border-color;
      }

      > div:nth-child(2) > .dataTables_filter {
        border-left-width: 1px;
        border-left-style: solid;
        @include table-border-color;
      }
    }
  }
  .card-address-summary > .card-header {
    text-align: center;

    > #claim-address {
      float: none;
      display: block;
    }
  }
}

.logo-main {
  padding: 0 15px;
}

.decimal {
  font-size: 0.7em;
}

.cardSpacer {
  margin-bottom: 10px;
}

.breakWord {
  word-break: break-word;
}

.entryField {
  max-width: 600px;
}

.card-body, .card-default.border-0 > .card-header {
  border-width: 1px;
  border-style: solid;
  @include table-border-color;
}

.card-body {
  border-width: 1px;
  border-style: solid;
  @include table-border-color;
}

.card-default.border-0 > .card-header {
  border-width: 1px;
  border-style: solid;
  border-bottom-width: 0;
  @include table-border-color;
}

.right-border-0 {
  border-right: 0;
}

.bottom-border-0 {
  border-bottom: 0;
}

.bottom-border-1 {
  border-bottom-width: 1px !important;
  border-bottom-style: solid !important;
  @include table-border-color(1);
}

.fa-spinner {
  font-size: 18px;
  margin-bottom: 6px;
}

.market-logo {
  margin-right: 7px;
}

.vertical-align-middle {
  vertical-align: middle !important;
}

.wealth-dist-color-box {
  width: 20px;
  height: 20px;
  margin-right: 6px;
}

.navbar-toggler-icon {
  display: inline-block;
  vertical-align: middle;
  content: "";
  background: no-repeat center center;
  background-size: 100% 100%;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navbar-toggler {
  color: #000;
  border-color: rgba(0, 0, 0, 0.1) !important;
  border-width: 1px !important;
  border-radius: .25rem !important;
  padding: .25rem .75rem !important;
  font-size: 1.171875rem !important;
}

.navbar-header {
  margin-left: auto;
}

#main-header {
  display: block;
  padding: 0;
  flex-wrap: nowrap;
  align-items: stretch;
  justify-content: flex-start;

  > .navbar > .container {
    max-width: none;
    padding-left: 0;
    padding-right: 0;
  }
}

#search-navbar-collapse {
  padding: 5px 15px;
}

#search-navbar-collapse.collapse:not(.show) {
  display: none;
}

#search-header-button {
  padding: .25rem .75rem;
  font-size: 1.171875rem;
  line-height: 1;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: .25rem;
  border-color: rgba(0, 0, 0, 0.1) !important;
  border-width: 1px !important;

  > span.fa-search {
    padding-top: 5px;
    width: 1.5em;
    height: 1.5em;
  }
}

.navbar-light #search-header-button > span {
  @include header-button-light;
}

.navbar-dark #search-header-button > span {
  @include header-button-dark;
}

.navbar-nav .nav-link {
  color: #000;
}

.navbar-nav .active .nav-link {
  color: #686868;
}

.navbar-nav .nav-link:hover {
  color: #686868;
}

#page-header-container {
  display: flex;
  margin-bottom: 5px;
}

#header-img-container {
  margin-right: 5px;
}

#header-img {
  width: 48px;
  height: 48px;
}

#page-title {
  margin: 0;
}

.sub-page-header {
  font-size: 90%;
}

#buy-orders_wrapper, #sell-orders_wrapper {
  .dataTables_scrollHead {
    border-right-width: 1px !important;
    border-right-style: solid !important;
    border-bottom-width: 1px !important;
    border-bottom-style: solid !important;
    @include table-border-color(1);
  }

  .dataTables_scrollBody {
    border-right-width: 1px;
    border-right-style: solid;
    border-bottom-width: 1px;
    border-bottom-style: solid;    
    @include table-border-color;
  }
}

#showClaimInstructions {
  color: #ffffff;
}

#showClaimInstructions:hover {
  color: #efefef;
}

